# simple_forecaster

./: .gitignore  ReadMe.md  TO-DO  example.ipynb  example.xlsx  forecaster.py  piplines.py  pyproject.toml  requirements.txt  setup.cfg  test.py
.ipynb_checkpoints/: example-checkpoint.ipynb  forecaster-checkpoint.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/core/models/: arima.py  ensemble.py  es.py  model_validation.py  prophet.py  stl_arima.py  utils.py
src/core/optimizers/: arima_optimizer.py  es_optimizer.py  prophet_optimizer.py  stl_arima_optimizer.py
src/pipelines/: simple_forecaster.py
src/utils/: plots_utils.py
