[metadata]
name = simple_forecaster
version = 1.0.0
author = nizenkiy
author_email = nizenkiy@gmail.py
description = A Python package for easier forecasting
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/nikitakv1-gif/simple_forecaster
project_urls =
    Bug Tracker = https://github.com/nikitakv1-gif/simple_forecaster/issues
    repository = https://github.com/nikitakv1-gif/simple_forecaster
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src